web/multiplayer-ingress.yaml
apiVersion: v1
kind: Ingress
metadata: 
  name: multiplayer-ingress
spec: 
  backend: 
    serviceName: multiplayer-service
    servicePort: 4000
